--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,13 @@
    /* Font Weight */
    --font-medium: 500;
    --font-semibold: 600;
-   --font-bold: 400;
+   --font-bold: 700;
 
    /* Box-shadow */
-   --shadow: 0px 5px 20px 0px rgb(69 67 96 / 10%)
+   --shadow: 0px 5px 20px 0px rgb(69 67 96 / 10%);
 
    /* Border-radius */
-   --border-radius: 20px
+   --border-radius: 20px;
 }
 
 /* Responsive typography */
@@ -64,7 +64,7 @@ body,
 input,
 textarea,
 button{
-   font-family: var(--body-color);
+   font-family: 'Rubik, sans-serif';
    font-size: var(--normal-font-size);
 }
 
@@ -72,6 +72,7 @@ body{
    background-color: var(--body-color);
    line-height: 1.7;
    color: var(--text-color);
+   font-family: 'Rubik', sans-serif;
 }
 
 h1, h2, h3{
